# energy-aware-computing

./: .gitignore  .gitmodules  EIGENVECTORS FROM EIGENVALUES.py  README.md  cifar10_resnet.py  clean  docker-compose.yml  dockerfile  experiment.yaml  fathom.dockerfile  fft-testing.py  gpu-benchmark.md  literatur.md  mnist_cnn.py  pip-freeze.txt  pyproject.toml  requirements-analysis.txt  requirements.bck  requirements.in  requirements.txt  requirements.txt.dgx  run-benchmark.py  run.sh  run_benchmark.py  test_profiling.sh  text_extraction_with_bert.py  tutorial1.h5
analysis/: generate_plots.py  generate_tables.py  make_plots-Copy1.py  make_plots.py  make_plots_ecg.py  new_analysis.py
benchmake/: main.py
benchmarks/: .gitignore  bert.yaml  bert_data_extra_small.pkl  cifar10_resnet.py  cluster_select.py  download_dataset_bert.py  finetune_bert.py  mnist-cnn-dataset.yaml  mnist-cnn.yaml  mnist-dense.yaml  mnist.yaml  mnist_cnn.py  mnist_cnn_dataset.py  mnist_dense.py  nbody.py  nbody.yaml  resnet.yaml
colorfilter/: Makefile  boilerplate.h  colorfilter.c  moreboilerplate.h
cufft/: cufftexample.c
docker/: dockerfile  dockerfile.power  gpu.Dockerfile
enroot/: hello-world.sh  install-dependencies.sh  install-project.sh
fft/: dft.cpp  fft.cpp  makefile  py_fft.py  smi-tool.py  util.hpp  validate.py
gpyjoules/: Experiment.py  cifar10_resnet.py  data-analysis copy.py  data-analysis.py  data_analysis.py  data_analysis_copy.py  data_collection.py  download_dataset_bert.py  example_call.sh  finetune_bert.py  g_py_joules.py  generate_plots.py  generate_tables.py  (+17 more)
(+54 files in other folders)
