[project]
name="gpyjoules"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "pynvml3@git+https://github.com/sirexeclp/nvidia-ml-py3.git"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gpyjoules*"]  # ["*"] by default
#exclude = ["tests*"]  # empty by default
[project.scripts]
gpyjoules = "gpyjoules.gpyjoules:main"
